2019-10-10  Youenn Fablet  <youenn@apple.com>

        Do not timeout a load intercepted by service worker that receives a response
        https://bugs.webkit.org/show_bug.cgi?id=202787

        Reviewed by Chris Dumez.

        * http/wpt/service-workers/fetch-timeout-worker.js: Added.
        (async.doTest):
        * http/wpt/service-workers/fetch-timeout.https-expected.txt: Added.
        * http/wpt/service-workers/fetch-timeout.https.html: Added.
        * http/wpt/service-workers/resources/lengthy-pass.py:
        (main):

2019-10-10  Myles C. Maxfield  <mmaxfield@apple.com>

        FontFaceSet's ready promise is not always resolved
        https://bugs.webkit.org/show_bug.cgi?id=202548

        Reviewed by Youenn Fablet.

        * fast/text/fontfaceset-ready-not-fired-expected.txt: Added.
        * fast/text/fontfaceset-ready-not-fired.html: Added.
        * fast/text/fontfaceset-ready-not-fired-2-expected.txt: Added.
        * fast/text/fontfaceset-ready-not-fired-2.html: Added.

2019-10-10  Wenson Hsieh  <wenson_hsieh@apple.com>

        pointerevents/ios/touch-action-pinch-zoom-allows-zooming.html is failing after r250361
        https://bugs.webkit.org/show_bug.cgi?id=202777
        <rdar://problem/56128421>

        Reviewed by Tim Horton.

        This layout test is intended to verify that pinching to zoom out in an element with `touch-action: pinch-zoom`
        will cause the page scale to change (i.e. decrease). This test works on iPhone, where the initial-scale meta
        viewport property is respected. However, a desktop viewport configuration is used by default on iPad, which
        ignores the initial-scale property by default.

        Prior to r250361, we would always try and scale down content to fit within the viewport, such that the initial
        scale in this layout test on iPad would be approximately 0.384; this meant that the test would pass, regardless