@@ -1,6 +1,6 @@
 
-RUN(video.src = URL.createObjectURL(source))
 pageshow - not from cache
+RUN(video.src = URL.createObjectURL(source))
 EVENT(sourceopen)
 RUN(sourceBuffer = source.addSourceBuffer("video/mock; codecs=mock"))
 EXPECTED (source.sourceBuffers[0] == '[object SourceBuffer]') OK
